==> pepe2k/CC3000-SDK/CC3000 SDK/MSP430F5529/HTTP Server Application/HTTP Server Source/Source/CC3000 Spi/spi.c <==
#include "hci.h"
#include "spi.h"
#include "evnt_handler.h"
#include "board.h"
#include <msp430.h>
#define READ                    3
#define WRITE                   1
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define ASSERT_CS()          (RF_CS_OUT &= ~RF_CS)
#define DEASSERT_CS()        (RF_CS_OUT |= RF_CS)
#define HEADERS_SIZE_EVNT       (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE			(5)
#define 	eSPI_STATE_POWERUP 				 (0)
#define 	eSPI_STATE_INITIALIZED  		 (1)
#define 	eSPI_STATE_IDLE					 (2)
#define 	eSPI_STATE_WRITE_IRQ	   		 (3)
#define 	eSPI_STATE_WRITE_FIRST_PORTION   (4)
#define 	eSPI_STATE_WRITE_EOT			 (5)
#define 	eSPI_STATE_READ_IRQ				 (6)
#define 	eSPI_STATE_READ_FIRST_PORTION	 (7)
#define 	eSPI_STATE_READ_EOT				 (8)
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

int init_spi(void)
{

	UCB0CTL1 |= UCSWRST; // Put state machine in reset
	UCB0CTL0 = UCMSB + UCMST + UCMODE_0 + UCSYNC; // 3-pin, 8-bit SPI master

	UCB0CTL1 = UCSWRST + UCSSEL_2; // Use SMCLK, keep RESET
	
	// Set SPI clock
	//UCB0CTL1 |= UCSWRST; // Put state machine in reset
	UCB0BR0 = 2; // f_UCxCLK = 25MHz/2 = 12.5MHz
	UCB0BR1 = 0;
	UCB0CTL1 &= ~UCSWRST;
	
	return(ESUCCESS);
}

void
SpiWriteDataSynchronous(unsigned char *data, unsigned short size)
{
	while (size)
	{   	
		while (!(TXBufferIsEmpty()));
		UCB0TXBUF = *data;
		while (!(RXBufferIsEmpty()));
		UCB0RXBUF;
		size --;
		data++;
	}
}

__interrupt void IntSpiGPIOHandler(void)
{
	switch(__even_in_range(P2IV, P2IV_P2IFG7))
	{
	case P2IV_P2IFG4:
		if (sSpiInformation.ulSpiState == eSPI_STATE_POWERUP)
		{
			//This means IRQ line was low call a callback of HCI Layer to inform 
			//on event 
	 		sSpiInformation.ulSpiState = eSPI_STATE_INITIALIZED;
		}
		else if (sSpiInformation.ulSpiState == eSPI_STATE_IDLE)
		{
			sSpiInformation.ulSpiState = eSPI_STATE_READ_IRQ;
			
			/* IRQ line goes down - we are start reception */
			ASSERT_CS();
			
			// Wait for TX/RX Compete which will come as DMA interrupt
			SpiReadHeader();
			
			sSpiInformation.ulSpiState = eSPI_STATE_READ_EOT;
			
			SSIContReadOperation();
		}
		else if (sSpiInformation.ulSpiState == eSPI_STATE_WRITE_IRQ)
		{
			SpiWriteDataSynchronous(sSpiInformation.pTxPacket, 
															sSpiInformation.usTxPacketLength);
			
			sSpiInformation.ulSpiState = eSPI_STATE_IDLE;
			
			DEASSERT_CS();
		}
		break;
	default:
		break;
	}
	
}
